--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnTestWriteToFile"
+        android:layout_width="164dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="256dp"
+        android:layout_marginEnd="15dp"
+        android:onClick="buttonListener"
+        android:text="@string/gyms_nearby"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnMap"
+        app:layout_constraintTop_toTopOf="parent" />
     <!--<Button-->
         <!--android:id="@+id/btnTest"-->
         <!--android:layout_width="wrap_content"-->
