--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,15 +60,43 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnTestWriteToFile"
+        android:id="@+id/btnAvatar"
+        android:layout_width="164dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="396dp"
+        android:layout_marginEnd="231dp"
+        android:onClick="buttonListener"
+        android:text="@string/routine_s_lookup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnWeightHistory"
         android:layout_width="164dp"
         android:layout_height="86dp"
         android:layout_marginStart="51dp"
         android:layout_marginTop="256dp"
         android:layout_marginEnd="15dp"
         android:onClick="buttonListener"
-        android:text="@string/gyms_nearby"
+        android:text="@string/weight_history"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnMap"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnLeaderboard"
+        android:layout_width="164dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="396dp"
+        android:layout_marginEnd="15dp"
+        android:onClick="buttonListener"
+        android:text="@string/leaderboard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/btnMap"
         app:layout_constraintTop_toTopOf="parent" />
     <!--<Button-->
